--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="qr_btns">
           <button id="Generatebtn">Generate</button>
-          <a href="" id="Downloadbtn" download="QR_Code.jpeg">Download</a>
+          <a href="" id="Downloadbtn" download="QR_Code.png">Download</a>
         </div>
       </div>
     </div>
